# simpleArduinoLibProj

./: README.md  library.properties
examples/MegatestExample/: MegatestExample.ino
src/: Arduino.cpp  Arduino.h  CMakeLists.txt  Megatest.cpp  Megatest.h  extracode.cpp  extracode.h  main.cpp
